router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__no_typename_on_interface-3.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: with_reversed_fragments
---
{
  "data": {
    "dog": {
      "name": "Spot",
      "id": "0000"
    }
  }
}
