router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__no_typename_on_interface.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: no_typename
---
{
  "data": {
    "dog": {
      "id": "4321",
      "name": "Spot"
    }
  }
}
