router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__query_reconstruction.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "errors": [
    {
      "message": "invalid type for variable: 'userId'",
      "extensions": {
        "name": "userId",
        "code": "VALIDATION_INVALID_TYPE_VARIABLE"
      }
    }
  ]
}
