router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__reconstruct_deferred_query_under_interface.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "me": {
      "id": 0,
      "fullName": "A",
      "memberships": [
        {
          "permission": "USER"
        }
      ]
    }
  },
  "hasNext": true
}
