router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__root_typename_with_defer-2.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": {
        "name": null
      },
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        0
      ]
    },
    {
      "data": {
        "name": "A"
      },
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        1
      ]
    },
    {
      "data": {
        "name": null
      },
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        2
      ]
    }
  ]
}
