router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__root_typename_with_defer.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: res
---
{
  "data": {
    "__typename": "Query",
    "currentUser": {
      "activeOrganization": {
        "id": "0",
        "suborga": [
          {
            "id": "1"
          },
          {
            "id": "2"
          },
          {
            "id": "3"
          }
        ]
      }
    }
  },
  "hasNext": true
}
