router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__subscription_callback_schema_reload.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: res
---
{
  "data": null
}
